# telegram-search-engine

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
apps/bot/: main.py
apps/crawler/: channels.py  main.py
configs/: app.toml  meilisearch.json
docs/: api.md  architecture.md  configuration.md  deployment.md
telegram_search/: __init__.py  config.py  logging.py
telegram_search/cache/: __init__.py  redis_cache.py
telegram_search/indexer/: __init__.py  channel_registry.py  historical_sync.py  importer.py  ingest_service.py  realtime_listener.py  state_store.py  telethon_client.py
telegram_search/models/: __init__.py  message.py
telegram_search/pipeline/: __init__.py  deduper.py  filters.py  normalizer.py  tokenizer.py  transformer.py
telegram_search/search/: __init__.py  meili_client.py  query_parser.py  search_service.py
telegram_search/stats/: __init__.py  stats_service.py
tests/: conftest.py  test_cache.py  test_channel_registry.py  test_config.py  test_filters.py  test_historical_sync.py  test_indexer.py  test_ingest_service.py  test_pipeline.py  test_query_parser.py  test_realtime_listener.py  test_search.py  test_state_store.py  test_stats.py
